--- a/assets/css/style-give.css
+++ b/assets/css/style-give.css
@@ -1,130 +1,4 @@
 
-#footer{
-    clear: both;
-    background-color: rgb(230, 190, 104); 
-    color: #ffffff;
-    border-top: 3px solid #222;
-    border-bottom: 64px solid rgb(206, 145, 39);
-    margin-left: 10px;
-    position: absolute;
-    /*
-    
-    top: 240%;
-   /* top:2620px;*
-    */
-    /* color: #17a2b8;
-    color: #ffffff;
-    color: #007bff;
-   */ 
-
-    
-}
-#logo {
-    margin-left: 40px;
-    float: right;
-}
-#head-logo{
-    float: right;
-    margin-left: 20px;
-}
-#social-media{
-    margin-left: 160px;
-    margin-top: 20px;
-}
-header{
-    margin-left: 60px;
-    margin-right: 80px;
-   /* height: 230px;
-    width: 900px; */
-    
-}
-div#foot-nav{
-    /*margin-left: 580px;*/
-    margin-top: 40px;
-    margin-left: 10px;
-    
-}
-hr{
-    color: #ffeeba;
-}
-.table-links, th, td {
-    border: 0px solid black;
-  }
-#navigation{
-    float: left;
-    
-
-}
-.nav-link{
-    font-size: 20px;
-    margin-top: 70px;
-    float: left;
-}
-.display-3, .display-4,.info{
-    text-align: center;
-}
-.give-p{
-   /* margin-left: 200px;
-    margin-right: 100px; 
-    text-align: justify; */
-    color: #ffffffe5;
-    font-size: 20px;
-    font-weight: 900;
-    font-family: Arial, Helvetica, sans-serif;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
-}
-
-#home-main-section,#give-main-section{
-    clear: both; 
-    margin-left: 10px;
-    margin-right: 70px;
-    margin-top: 25px;
-   
-}
-
-#home-p1{
-    
-    background-image: url("./images/church3.png");
-    background-repeat: no-repeat;
-    height: 600px;
-   /*  padding-bottom: 50%;
-   margin-top: 200px; 
-    
-    height: 600px;*/
-    
-}
-
-#home-p2{
-    color: #222;
-    height: 499px;
-    
-    top: 870px;
-}
-
-#home-p3{
-    top: 1353px;
-    border-top: 1px solid #222;
-    height: 764px;
-    
-    
-}
-  #give-p1
-{ 
-    width: 1341.73px; 
-    position:absolute;
-}
-#home-text{
-    clear: both;
-    height: 200px;
-    margin-left: 350px;
-    padding-top:  200px;
-    font-size: 50px;
-    color: #ffffff;
-    font-weight: bolder;
-    font-style: unset;
-/* margin-top: 80px;color: #0f67b3;*/
-}
 
 #give-p1{
     
@@ -137,12 +11,16 @@ hr{
 }   
 #section-1{
     
-    background-image: url("./images/tithe.png");
+    
+    background-image: url("../images/36926646916_5eeef40750_o.jpg");
     background-repeat: no-repeat;
-    height: 436px;
-    position: relative;
-    margin-left: 10px;
-    margin-right: 10px;
+    background-size: 100% 100%;
+    
+    height: 400px;
+    
+    width: 100%;
+
+    
 }   
 #section-2{
     position: relative;
