--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,10 +139,15 @@ html{
 
 div#foot-nav{
     
-    margin-top: 40px;
-   /* margin-left: 10px;*/
-    
-}*/
+    margin-top: 30px;
+   margin-left: 10px;
+   
+}
+#menu-footer-left.nav, #menu-footer-right.nav{
+    margin-right: 5px;
+    margin-left: 0px;
+    margin-top: 8px;
+}
 #social-media{
     margin-left: 20px;
     margin-top: 20px;
