--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,17 @@ html{
     margin: 0 auto;
     
 }
-
+/*  ADDING THE BELOW p TAG STYLES GOT RID OF THE GAP BETWEEN MY DIVS
+*/
+p{
+    margin: 0;
+    padding: 0.5em 1em;
+    
+}
+/*************************************************************/
+.display-3, .display-4,.info{
+    text-align: center;
+} 
 #top, #home-p2, #home-p3, #footer {
     /*
     width: 930px;
@@ -19,11 +29,13 @@ html{
 
     
 }
-
+/********************************************************************
+/***********************************************************************************************************/
+/*  
+/*                       F O O T E R 
+/***********************************************************************************************************/
+/********************************************************************/
 #footer{
-   /*
-    background-color: #ffeeba;
-    background-color: #2196f3; /* I love this blue */
     background-color: #0b76be;
     background-color: #800020;
     background-color: #404040;
@@ -31,27 +43,35 @@ html{
     border-top: 3px solid #222;
     border-bottom: 24px solid #634d4d;
     border-bottom: 24px solid #800020;
+}
+#social-media{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+div#foot-nav{
     
-    
-    
-    
-   /* top:2620px;*/
-    
-    
-    /* color: #17a2b8;
-    position: absolute;
-    width: 930px;
-    top: 450%;
-    color: #ffffff;
-    color: #007bff;
-    margin-left: 10px;
-   */ 
+    margin-top: 30px;
+    margin-left: 20px;
+    font-size: 15px;
+   
+}
+.menu-link{
+    font-size: 7px;
+}
+/********************************************************************/
+/***********************************************************************************************************/
 
-    
-}
-.display-3, .display-4,.info{
-    text-align: center;
-}
+
+
+
+
+
+/********************************************************************
+/***********************************************************************************************************/
+/*  
+/*                       T O P   S E C T I O N
+/***********************************************************************************************************/
+/********************************************************************/
 
 #top{
     /*clear: both;   */
@@ -79,6 +99,26 @@ html{
 .nav-link{
     font-size: large;
 }
+#logo{
+    margin-top: 45px;
+    margin-left: 20px;
+}
+.responsive{
+    max-width: 100%;
+    height: auto;
+  }
+#scripture{
+    color: #ededed;
+    color: goldenrod;
+    font-family: 'Times New Roman', Times, serif;
+    margin-top: 5px;
+    font-size: 18px;
+}
+#script-list{
+    list-style: none;
+}
+/********************************************************************/
+/***********************************************************************************************************/
 
 #mid-section{
     clear: both;
@@ -113,12 +153,22 @@ html{
     
 }
 #home-p2{
-    height:545px;
+   height:545px; 
+    
+}
+#home-p3{
+    background-color: #e6c8c8;
+    background-color: #e0cbcb;
+    background-color: #e1cfd8 ;
+    background-color: #e0d9dd ;
+    color: #770f12;
+    color: #4a090b;
+    border: 4px solid #e1cfd8;
 }
 #home-text{
     clear: both;
     height: 200px;
-    margin-left: 150px;
+    margin-left: 100px;
     padding-top:  100px;
     font-size: 40px;
     color: #ffffff;
@@ -126,29 +176,9 @@ html{
     font-style: unset;*/
 /* margin-top: 80px;color: #0f67b3;*/
 }
-#logo{
-    margin-top: 45px;
-    margin-left: 20px;
-}
+
 #about-main-section{
     
 }
-.footer-link, .footer-p{
-    font-size: 15px;
-}
 
-div#foot-nav{
-    
-    margin-top: 30px;
-   margin-left: 10px;
-   
-}
-#menu-footer-left.nav, #menu-footer-right.nav{
-    margin-right: 5px;
-    margin-left: 0px;
-    margin-top: 8px;
-}
-#social-media{
-    margin-left: 20px;
-    margin-top: 20px;
-}
+
