--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ div#foot-nav{
     background-color: #404040;
     color: #ffffff;
     width: 665px;
-    height: 400px;
+    height: 530px;
     position: absolute;
     top: 0;
     left: 160;
@@ -269,6 +269,16 @@ div#foot-nav{
 #div4{
     height: 155px;
 }
+
+#serve-1{
+    clear: both;
+    background-image: url("../images/Choir/20191013_214935_resized[2].jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 400px; 
+    width: 100%;
+}
+
 @media screen and (max-width: 767px) {
     .responsive{
         width: 100%;
@@ -306,5 +316,6 @@ div#foot-nav{
     }
     #scripture{
         font-size: 10px;
+        f
     }
 }
