--- a/assets/css/style-test.css
+++ b/assets/css/style-test.css
@@ -1,21 +1,8 @@
-:root{
-   --orange: #fd7e14;
-   --prayer-winfdow-background: #f3c24e;
-   --burgundy: #800020;
-   --footer-background: #404040;
-   --footer-border-bottom: #634d4d;
-   --upcoming-events-font: #4a090b;
-   --scripture-font: goldenrod;
-   --font-color: #222;
-   --grey: #ededed;
-   --events-background-color: #e0d9dd ;
-}
-
-
-*/
 html{
     width: 960px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    
+    
     
 }
 /*  ADDING THE BELOW p TAG STYLES GOT RID OF THE GAP BETWEEN MY DIVS
@@ -37,11 +24,14 @@ p{
 */
 	
 }
-.container{
+#container{
+    background-color: transparent;
     width:960px;
-    /*max-width: 500px;*/
-    max-width: 500px;
-    margin: auto;
+    max-width: 960px;
+    /* max-width: 730px; */
+    margin: 0 auto;
+    
+   
 
     
 }
@@ -52,6 +42,7 @@ p{
 /***********************************************************************************************************/
 /********************************************************************/
 #footer{
+    clear: both;
     background-color: #0b76be;
     background-color: #800020;
     background-color: #404040;
@@ -92,12 +83,12 @@ div#foot-nav{
 #top{
     /*clear: both;   */
     
-    
+   
     background-image: url("../images/mtolive.png");
     background-image: url("../images/graphic2.png");
     background-repeat: no-repeat;
     margin-top: 1px;
-   /* width: 960px; */
+   /*width: 960px; */
     height: 280px;
     /* padding-bottom: 50%;
    
@@ -132,14 +123,17 @@ div#foot-nav{
 #scripture{
     color: #ededed;
     color: goldenrod;
-    color: #fff;
     font-family: 'Times New Roman', Times, serif;
     margin-top: 5px;
-    /*font-size: 2vw;n*/
-    font-size: 25px;
+    font-size: 2vw;
+    font-size: 15px;
 }
 #script-list{
     list-style: none;
+}
+#pR{
+   margin-top: 30px; 
+    
 }
 /********************************************************************/
 /***********************************************************************************************************/
@@ -148,18 +142,17 @@ div#foot-nav{
     clear: both;
     
     
-    background-image: url("../images/church3.png");
+    /* background-image: url("../images/church3.png");
     background-image: url("../images/36926646916_5eeef40750_o.jpg");
     background-image: url("../images/18981837903_586eeb43f2_o.jpg");
+    background-image: url("../images/20191118_191955.jpg");
     /*background-image: url("../images/church3.png"); */
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    border:1px solid #fff;
-    border:1px solid #000;
-    border:1px solid #fff;
-    height: 400px;
+    /* background-repeat: no-repeat;
+    background-size: 100% 100%;  */
     
-    width: 100%;
+    height: 467px;
+    /* width: 100%; */
+    
     
    /* width: 960px;*/
 }
@@ -179,7 +172,7 @@ div#foot-nav{
     
 }
 #home-p2{
-   height: 400px; 
+   height: 480px; 
    /*margin: 0;
    padding: 0; */
 }
@@ -191,7 +184,7 @@ div#foot-nav{
     color: #770f12;
     color: #4a090b;
     border: 4px solid #e1cfd8;
-    
+    height: 300px;
 }
 #home-text{
     clear: both;
@@ -208,14 +201,24 @@ div#foot-nav{
 #about-main-section{
     
 }
-/*
 #prayer-window{
     background-color: #f3c24e;
+    background-color: #404040;
+    color: #ffffff;
     width: 665px;
-    height: 400px;
+    height: 530px;
+    position: absolute;
+    top: 0;
+    left: 160;
+    display: none;
+    margin-left: 50px;
+    margin-top: 200px;
+    border: 1px solid #222;
+    border: 1px solid rgb(17, 16, 16);
+    border-bottom: 8px solid #800020;
 }
 #prayer-window.h1{
-    margin-left: 30px;
+    margin-left: 30px; 
 }
 #form{
     margin-left: 15px;
@@ -224,10 +227,89 @@ div#foot-nav{
     width: 600px;
     margin-left: ;
 }
-*/
-@media screen and (max-width: 767px) {
+#prayerMessage{
+    width: 590px;
+}
+#contact-p1{
+    height: 800px;
+}
+.pastorPic-responsive{
+    /* float: left;   */
+    /* height: 100%;
+    width: 100%; */
+    max-width: 300px;
+    margin-left: 10px;
+}
+/* #pastor-bio{
+    float: right;
+    width: 530px; 
+    /* text-align: justify;  */
+/* } */ */
+#first-lady{
+    float: left;
+    width: 530px;
+}
+#first-lady-pic{
+    float: right;
+}
+/* #vision{
+    float: left;
+    width: 600px;
+    clear: both;
+} */
+#fl{
+    clear: both;
+}
+
+#div1, #div2, #div3, #div4, #contact-p1, #serve-2, #serve-3{
+    margin: auto;
+    width: 100%;
+}
+/* #div1{
+    height: 390px;
+}
+#div2{
+   height: 800px;
+}
+#div3{
+    
+    height: 800px;
+}
+#div4{
+    height: 355px;
+} */
+
+#serve-1{
+    clear: both;
+    /* background-image: url("../images/Choir/20191013_214935_resized[2]_3.jpg"); */
+    /* background-repeat: no-repeat; */
+    /* background-size: 100% 100%; */
+    height: 467px; 
+    /* height: auto; */
+
+    /* width: 100%; */
+    /* border: 1px solid #000000; */
+}
+#serve-2{
+    height: 1000px;
+}
+#joinFB{
+    margin-left: 340px;
+}
+.responsive-slideshow{
+    /* width: 100%; */
+    max-width: 720px;
+    height: 540px;
+  }
+  .largePic-responsive{
+      max-width: 960px;
+      height: 467px;
+
+  }
+
+  @media screen and (max-width: 767px) {
     .responsive{
-        width: 100%;
+        width: 50%;
         max-width: 310px;
         height: auto;
 
@@ -237,12 +319,88 @@ div#foot-nav{
     }
     #nav{
    
-        margin-top: 100px;
-        margin-left: 158px;
-        width: 350px;
+        margin-top: 8px;
+        margin-left: 170px;
+        width: 500px;
         
     }
-}
+    /* #serve-2{
+        height: 2000px;
+    } */
+    /* #mid-section{
+        height: 402px;
+    } */
+    #home-p2{
+        height: 480px;
+    }
+    #home-p3{
+        height: 300px;
+    }
+    #contact-p1{
+        height: 820px;
+    }
+     #serve-1, #mid-section{
+        
+        height: 342px;
+    } 
+    #serve-h1{
+        font-size: 22px;
+    }
+    #serve-2{
+        height: 830px;
+    }
+    #joinFB{
+        margin-left: 100px;
+    }
+    .responsive-slideshow, .slideshow-container{
+        /* width: 100%; */
+        max-width: 400px;
+        height: 348px;
+        
+      }
+	 .largePic-responsive{
+        max-width: 680px;
+        /* max-width: 640px; */
+        height: 267px;
+        width: 100%;
+    }
+    html{
+        /* width: 700px; */
+        width: 650px;
+
+        margin:0 auto;
+            }
+    #container{
+        max-width: 680px;
+        /* max-width: 640px; */
+        margin: 0 auto;
+    }
+    #prayer-window{
+        width: 500px;
+    }
+    #prayerMessage{
+        width: 300px;
+    }
+    #prayer-window{
+       
+        width: 500px;
+        height: 530px;
+       
+        margin-left: 5px;
+       
+    }
+    #prayer-window.h1{
+        margin-left: 8px; 
+    }
+    .pastorPic-responsive{
+        /* float: left;   */
+        /* height: 100%;
+        width: 100%; */
+        max-width: 200px;
+    }
+    }
+
+
 
 @media screen and (max-width: 639px) {
     .responsive{
@@ -256,11 +414,79 @@ div#foot-nav{
     }
     #nav{
    
-        margin-top: 30px;
-        margin-left: 168px;
+        margin-top: 60px;
+        margin-left: 148px;
         
     }
     #scripture{
         font-size: 10px;
+        
     }
+    #home-p2{
+        height: 480px;
+    }
+    #home-p3{
+        height: 300px;
+    }
+    #contact-p1{
+        height: 880px;
+    }
+    #serve-2{
+        height: 840px;
+    }
+    #joinFB{
+        margin-left: 50px;
+    }
+    .responsive-slideshow, .slideshow-container{
+        /* width: 100%; */
+        max-width: 280px;
+        height: 244px;
+      }
+	.largePic-responsive{
+        max-width: 580px;
+        /* max-width: 540px; */
+        height: 237px;
+        width: 100%;
+    }
+    #mid-section{
+        height: 292px;
+    } 
+    #serve-1 {
+        /* width: 510px; */
+        height: 237px;
+    }
+    html{
+        width: 600px;
+        /* width: 550px; */
+        margin:0 auto;
+            }
+    #container{
+        /* width: 580px; */
+        max-width: 580px;
+        /* max-width: 540px; */
+        margin:0 auto;
+    }
+   
+    #prayerMessage{
+        width: 200px;
+    }
+    #prayer-window{
+       
+        width: 350px;
+        height: 530px;
+       
+        margin-left: 5px;
+       
+    }
+    #prayer-window.h1{
+        margin-left: 3px; 
+    }
+    .pastorPic-responsive{
+        /* float: left;   */
+        /* height: 100%;
+        width: 100%; */
+        max-width: 150px;
+        margin-left: 15px;;
+    }
+
 }
