--- a/assets/css/style-test.css
+++ b/assets/css/style-test.css
@@ -24,7 +24,7 @@ p{
 */
 	
 }
-#container{
+.container{
     background-color: transparent;
     width: 960px;
     max-width: 930px;
@@ -89,7 +89,7 @@ div#foot-nav{
     background-repeat: no-repeat;
     margin-top: 1px;
    /*width: 960px; */
-    height: 280px;
+    height: 310px;
     /* padding-bottom: 50%;
    
     
@@ -306,7 +306,52 @@ div#foot-nav{
       height: 467px;
 
   }
+  @media (max-width: 992px) {
+    html {
+      width: 768px;
+      margin:0 auto;
+      max-width: 100%;
 
+
+    }
+    .responsive{
+        width: 90%;
+        max-width: 310px;
+        height: auto;
+
+    }
+    .largePic-responsive{
+        max-width: 720px;
+        /* max-width: 640px; */
+        height: 267px;
+        width: 100%;
+    }
+    .responsive-slideshow, .slideshow-container{
+        /* width: 100%; */
+        max-width: 500px;
+        height: 375px;
+        
+      }
+    #nav{
+   
+        margin-top: 60px;
+        margin-left: 0px;
+        width: 400px;
+        
+    }
+    .pastorPic-responsive{
+        /* float: left;   */
+        /* height: 100%;
+        width: 100%; */
+        max-width: 230px;
+    }
+    #serve-1{
+        height: 347px;
+    }
+    #serve-2{
+        height: 980px;
+    }
+  }
   @media screen and (max-width: 767px) {
     .responsive{
         width: 80%;
@@ -323,7 +368,7 @@ div#foot-nav{
     }
     #nav{
    
-        margin-top: 100px;
+        margin-top: 8px;
         margin-left: 170px;
         width: 400px;
         
@@ -343,7 +388,10 @@ div#foot-nav{
     #contact-p1{
         height: 820px;
     }
-     #serve-1, #mid-section{
+    #serve-1{
+        height: 260px;
+    }
+     #mid-section{
         
         height: 342px;
     } 
@@ -351,7 +399,7 @@ div#foot-nav{
         font-size: 22px;
     }
     #serve-2{
-        height: 830px;
+        height: 880px;
     }
     #joinFB{
         margin-left: 100px;
@@ -362,15 +410,17 @@ div#foot-nav{
         height: 348px;
         
       }
-	 .largePic-responsive{
+      .largePic-responsive{
         max-width: 680px;
         /* max-width: 640px; */
-        height: 267px;
+        height: 342px;
         width: 100%;
     }
     html{
         width: 640px;
         margin:0 auto;
+        max-width: 100%;
+
             }
     
     #container{
@@ -422,7 +472,7 @@ div#foot-nav{
         font-size: small;
     }
     #nav{
-   
+        width: 280px;
         margin-top: 30px;
         margin-left: 148px;
         
@@ -438,7 +488,7 @@ div#foot-nav{
         height: 300px;
     }
     #contact-p1{
-        height: 880px;
+        height: 910px;
     }
     #serve-2{
         height: 840px;
@@ -457,16 +507,15 @@ div#foot-nav{
         height: 237px;
         width: 100%;
     }
-    #mid-section{
-        height: 292px;
-    } 
-    #serve-1 {
+    
+    #serve-1, #mid-section {
         /* width: 510px; */
         height: 237px;
     }
      html{
         width: 500px;
         margin:0 auto;
+        max-width: 100%;
             }
     
     #container{
